# ds-star-ifs

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: ARCHITECTURE_OVERVIEW.md  ENTRYPOINTS.md  PROJECT_STRUCTURE.md
dsstar/: __init__.py  __main__.py  cli.py  config.py  loop.py  prompts.py  runtime_paths.py  state.py
dsstar/agents/analyzer/: analyzer.py  master_manager.py  signature.py
dsstar/agents/coder/: coder.py
dsstar/agents/debugger/: debugger.py
dsstar/agents/executor/: executor.py
dsstar/agents/finalyzer/: finalyzer.py
dsstar/agents/planner/: planner.py
dsstar/agents/router/: router.py
dsstar/agents/verifier/: verifier.py
dsstar/knowledge/: describe_master.py
dsstar/llm/: __init__.py  base.py  deepseek_client.py  gemini_client.py  local_stub.py  mock_client.py  openai_client.py  registry.py
dsstar/tools/: __init__.py  describe_files.py  exec_sandbox.py  log_utils.py  text_utils.py
dsstar/utils/: __init__.py  diff_utils.py
runs/20260205_210607/: descriptions.json  plan.json  round_00_exec.json
runs/20260205_212755/: final_answer.md  plan.json  round_00_exec.json  round_00_prompt.txt  round_01_code.py  round_01_exec.json  round_01_prompt.txt  round_02_exec.json  round_02_prompt.txt
runs/20260205_213336/: plan.json  round_00_exec.json  run_metadata.json
tests/: test_analyzer.py  test_llm_deepseek_client.py  test_prompts.py  test_router.py  test_smoke.py
